--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2503,13 +2503,15 @@ input, select, textarea {
 				color: #fff;
 				font-size: 2.75em;
 				margin: 0 0 0.5em 0;
+				text-transform: none;
 			}
 
 			#banner .content p {
 				display: block;
 				font-family: 'Open Sans Condensed', sans-serif;
 				font-weight: 700;
-				text-transform: uppercase;
+				/* text-transform: uppercase; */
+				text-transform: none;
 				color: #e4e7e5;
 				font-size: 1.35em;
 				margin: 0 0 1.25em 0;
@@ -2525,6 +2527,7 @@ input, select, textarea {
 				border: solid 4px #575d59;
 				border-color: rgba(87, 93, 89, 0.35);
 				font-size: 1.5em;
+				text-transform: none;
 			}
 
 				#banner .content .button:hover {
