--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2413,7 +2413,7 @@ input, select, textarea {
 
 			#nav li.current a {
 				/* background: #b1ddab; */
-				background: #9accdb
+				background: #9accdb;
 				color: #fff;
 			}
 
