Change all light green elements to light blue
Changing #b1ddab to #a1cfdd

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1792,7 +1792,8 @@ input, select, textarea {
 		font-weight: 700;
 		text-transform: uppercase;
 		text-decoration: none;
-		background: #b1ddab;
+		/* background: #b1ddab; */
+		background: #a1cfdd;
 		color: #fff;
 		border: 0;
 		line-height: 1em;
@@ -2544,7 +2545,8 @@ input, select, textarea {
 
 	#main {
 		background: #fff;
-		border-top: solid 5px #b1ddab;
+		/* border-top: solid 5px #b1ddab; */
+		border-top: solid 5px #a1cfdd;
 		border-bottom: solid 5px #c1cac5;
 		border-top-width: 35px;
 		border-bottom-width: 10px;
@@ -2827,7 +2829,8 @@ input, select, textarea {
 						position: absolute;
 						left: 0;
 						top: 0;
-						background: #b1ddab;
+						/* background: #b1ddab; */
+						background: #a1cfdd;
 						width: 44px;
 						height: 44px;
 						content: '\f0c9';
